--- a/my.html
+++ b/my.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>Hellow , How are you ?</p>
-    <p>this is in feature1 </p>
+    <p>this is in feature1 (drop down) </p>
 </body>
 </html>
